qhouyee/255/concurrent-query: enable preview mode of java